--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
     "sass": "^1.69.5",
+    "source-map-resolve": "^0.6.0",
     "styled-components": "^6.1.6",
     "web-vitals": "^2.1.3"
   },
